Video object on iPad doesn't listen to z-index. fix #2093

--- a/couchpotato/core/media/movie/_base/static/movie.css
+++ b/couchpotato/core/media/movie/_base/static/movie.css
@@ -641,6 +641,12 @@
 					position: absolute;
 					z-index: 10;
 				}
+					@media only screen and (device-width: 768px) {
+						.trailer_container iframe {
+							margin-top: 25px;
+						}
+					}
+					
 					.trailer_container.hide {
 						height: 0 !important;
 					}
